practice web app

--- a/scotland_website/scotland.html
+++ b/scotland_website/scotland.html
@@ -38,6 +38,9 @@
         <article>
             <div class="squad-img">
                 <img src="ScotlandSquad1.jpeg" rel="Scotland Squad">
+                <div class="text-block">
+                    <h2>Latest News</h2>
+                </div>
             </div>
         </article>
     </main>
